# physical-ai-hub

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  docker-compose.yml
data/tools/: convert_joint_to_ee.py  replay_ee_dataset.py
docker/gr00t/: Dockerfile
docker/leisaac/: Dockerfile
docker/openpi/: Dockerfile
docker/piper/: Dockerfile
docs/: add_robot.md  add_vla.md  quickstart.md  submodule_fork_guide.md
envs/: .env.base.example  .env.gr00t  .env.leisaac  .env.openpi  .env.piper
eval/isaac_lab/: README.md
eval/isaac_sim/: README.md
robots/pika/tools/: check_dual.py  check_pika.py  check_pika_dual.py  check_single.py  pika_utils.py  teleoperate_pika_with_calib.py  teleoperate_with_calib.py  utils.py
robots/piper/: pyproject.toml
robots/piper/lerobot_piper/: __init__.py
robots/piper/lerobot_robot_bi_piper_follower/: README.md  pyproject.toml
robots/piper/lerobot_robot_bi_piper_follower/src/lerobot_robot_bi_piper_follower/: __init__.py  bi_piper_follower.py  config_bi_piper_follower.py
robots/piper/lerobot_robot_piper_follower/: README.md  pyproject.toml
robots/piper/lerobot_robot_piper_follower/src/lerobot_robot_piper_follower/: __init__.py  config_piper_follower.py  piper_follower.py
robots/piper/lerobot_teleoperator_bi_piper_leader/: README.md  pyproject.toml
robots/piper/lerobot_teleoperator_bi_piper_leader/src/lerobot_teleoperator_bi_piper_leader/: __init__.py  bi_piper_leader.py  config_bi_piper_leader.py
robots/piper/lerobot_teleoperator_piper_leader/: README.md  pyproject.toml
robots/piper/lerobot_teleoperator_piper_leader/src/lerobot_teleoperator_piper_leader/: __init__.py  config_piper_leader.py  piper_leader.py
robots/piper/piper_common/: README.md  pyproject.toml
robots/piper/piper_common/src/piper_common/: arm_mixin.py  constants.py  leader_mixin.py  utils.py
robots/piper/piper_common/tests/: test_piper_common.py
robots/piper/tools/: activate_can.sh  check_realsense_intrinsics.py  compare_fk.py  disable_ctrl.py  find_can_ports.sh  go_zero.py  measure_workspace.py  replay_ee_dataset.py
rollout/: __init__.py  _paths.py  action_trace.py  async_inference.py  inference_loop.py  openpi_inference_loop.py  piper.py  serialization.py  test_action_trace.py  test_inference_loop.py
rollout/clients/: __init__.py  base.py  openpi.py
scripts/collect/: record_piper.sh  teleop_piper.sh
scripts/data/: convert_joint_to_ee.sh  record_bi_piper.sh  record_piper.sh  replay_ee_piper.sh  replay_piper.sh  teleoperate_bi_piper.sh  teleoperate_piper.sh
scripts/eval/: _leisaac_common.sh  convert_leisaac.sh  eval_leisaac.sh  replay_leisaac.sh  run_leisaac.sh  start_gr00t_server.sh  start_openpi_server.sh  tune_camera_leisaac.sh  zero_pose_leisaac.sh
scripts/robots/piper/: activate_can.sh  check_realsense_intrinsics.sh  compare_fk.sh  disable_ctrl.sh  find_can_ports.sh  go_zero.sh  measure_workspace.sh
scripts/rollout/: portforward_open.sh  rollout_gr00t.sh  rollout_openpi.sh
scripts/simulation/: convert_leisaac.sh  eval_leisaac.sh  replay_leisaac.sh  tune_base_camera_leisaac.sh  tune_camera_leisaac.sh  zero_pose_leisaac.sh
scripts/train/: train_gr00t.sh  train_openpi.sh
scripts/vla/: serve_openpi.sh  train_gr00t.sh  train_openpi.sh
vla/gr00t/: README.md
vla/openpi/: README.md
vla/tools/: piper_modality_config.py
