[project]
name = "lerobot_robot_bi_piper_follower"
version = "0.1.0"
description = "LeRobot Robot plugin for AgileX bi-PiPER follower arms"
readme = "README.md"
authors = [
    { name = "richardSHkim", email = "shkim@superb-ai.com" }
]
requires-python = ">=3.12"
dependencies = ["lerobot==0.5.0", "piper-common", "lerobot-robot-piper-follower==0.1.0", "piper_sdk==0.6.1"]

[project.scripts]
lerobot-robot-bi-piper-follower = "lerobot_robot_bi_piper_follower:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
