[project]
name = "piper-common"
version = "0.1.0"
description = "Shared constants, utilities, and mixins for PiPER LeRobot plugins"
readme = "README.md"
authors = [
    { name = "richardSHkim", email = "shkim@superb-ai.com" }
]
requires-python = ">=3.12"
dependencies = ["piper_sdk==0.6.1"]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
